[metadata]
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Takes an existing EchoStream Tenant and creates a Terraform script and statefile for it
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
name = echostream-terrafy
version = 0.0.3

[options]
python_requires = >=3.9
include_package_data = true
install_requires = 
    argh==0.26.2
    deepmerge==1.1.0
    gql[requests]==3.4.0
    pycognito==2022.11.2
    simplejson==3.18.1
packages = find:

[options.entry_points]
console_scripts =
    echostream-terrafy = echostream_terrafy:main
