[metadata]
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Takes an existing EchoStream Tenant and creates a Terraform script and statefile for it
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
name = echostream-terrafy
version = 0.0.9

[options]
python_requires = >=3.9
include_package_data = true
install_requires = 
    argh==0.28.1
    deepmerge==2.0
    gql[requests]==3.4.0
    pycognito==2022.12.0
    simplejson==3.18.4
    termcolor==2.2.0
packages = find:

[options.entry_points]
console_scripts =
    echostream-terrafy = echostream_terrafy:main
